--- a/heart-disease-rick-prediction-project.ipynb
+++ b/heart-disease-rick-prediction-project.ipynb
@@ -14,7 +14,7 @@
     "tags": []
    },
    "source": [
-    "#Heart Disease Risk Prediction Project#"
+    "#Heart Disease Risk Prediction Project"
    ]
   },
   {
